# conjuntos

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
src/conjuntos/: __main__.py  cli.py  constantes.py  entrada.py  formatacao.py  modelos.py  operacoes.py
