[project]
name = "conjuntos"
version = "1.0.0"
description = "Operações com Conjuntos — Lógica e Matemática Discreta (EECP0015)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
conjuntos = "conjuntos.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/conjuntos"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "F",     # pyflakes
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "A",     # flake8-builtins
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific
    "PTH",   # flake8-use-pathlib
    "RET",   # flake8-return
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
    "T20",   # flake8-print
]
ignore = [
    "T201",    
    "RUF001",
    "RUF002",
]

[tool.ruff.lint.isort]
known-first-party = ["conjuntos"]

[tool.ty.environment]
python-version = "3.12"

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.16",
]
